Fix dropdown z-index on Tx History view (#2722)

--- a/app/components/buttons/EyeFilterMenu/EyeFilterMenu.module.css
+++ b/app/components/buttons/EyeFilterMenu/EyeFilterMenu.module.css
@@ -75,6 +75,8 @@
   text-align: left;
   box-shadow: 0px 3px 8px var(--input-color-shadow);
   user-select: none;
+  /* set z-index to cover the animated ellipsis of a pending tx */
+  z-index: 1;
 }
 
 .menuItems.sortBy {
